attempt to fix oversized image on iphone x

--- a/src/scss/project.scss
+++ b/src/scss/project.scss
@@ -169,6 +169,7 @@
     .cardWrap {
         max-height: 6.2rem;
         width: 100%;
+        height: 100%;
     }
 }
 //for large
